--- a/Databricks_capstone_project/Bronze layer.ipynb
+++ b/Databricks_capstone_project/Bronze layer.ipynb
@@ -27,6 +27,7 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
+     "collapsed": true,
      "inputWidgets": {},
      "nuid": "28fad19b-4a6e-4d6d-b9bb-d7acc8d60b6d",
      "showTitle": false,
